--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -20,6 +20,32 @@
   background-color: #ffffff;
 }
 
+.sectionHeader {
+  display: flex;
+  justify-content: space-between; /* Space between heading and button */
+  align-items: center;
+}
+
+.viewAllBtn {
+  background-color: #0070f3;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+  font-size: 14px;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.viewAllBtn:hover {
+  background-color: #005bb5;
+}
+
+.animeRow {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 16px;
+}
 /* Main Heading */
 .heading {
   font-size: 32px;
