--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -71,7 +71,10 @@
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 20px;
 }
-
+.adContainer {
+  text-align: center;
+  /* margin: 20px 0; */
+}
 /* Responsive Styles */
 @media (max-width: 768px) {
   .animeRow {
